; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/security/open_to_operation/extr_open_to_operation.c_writev_wrapper.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/security/open_to_operation/extr_open_to_operation.c_writev_wrapper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iovec = type { i64, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i64)* @writev_wrapper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @writev_wrapper(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.iovec, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = getelementptr inbounds %struct.iovec, %struct.iovec* %7, i32 0, i32 1
  store i8* %8, i8** %9, align 8
  %10 = load i64, i64* %6, align 8
  %11 = getelementptr inbounds %struct.iovec, %struct.iovec* %7, i32 0, i32 0
  store i64 %10, i64* %11, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @writev(i32 %12, %struct.iovec* %7, i32 1)
  ret i32 %13
}

declare dso_local i32 @writev(i32, %struct.iovec*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
